--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,25 +1,21 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
-}
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
 }
 
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+
 }
 
 body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  font-size: 22px !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -35,8 +31,20 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+@media screen and (max-width: 1600px) {
+  html, body {
+    font-size: 16px !important;
+  }
+}
+
+@media screen and (max-width: 1399px) {
+  html, body {
+    font-size: 15px !important;
+  }
+}
+
+@media screen and (max-width: 1050px) {
+  html, body {
+    font-size: 14px !important;
   }
 }
