--- a/src/components/ui/signButton/signbutton.module.scss
+++ b/src/components/ui/signButton/signbutton.module.scss
@@ -6,11 +6,13 @@
   font-size: 1.5rem;
   text-transform: uppercase;
   letter-spacing: 5px;
-  font-family: var(--font-cormorant);
+  font-family: var(--font-cormoran);
   font-weight: bold;
   border-radius: 2rem;
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.25);
-  transition: box-shadow 0.3s ease, transform 0.2s ease;
+  transition:
+    box-shadow 0.3s ease,
+    transform 0.2s ease;
 
   &:hover {
     box-shadow: 6px 6px 15px rgba(0, 0, 0, 0.3);
