--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,14 +1,12 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
-
 }
 
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-
 }
 
 body {
@@ -32,19 +30,22 @@ a {
 }
 
 @media screen and (max-width: 1600px) {
-  html, body {
+  html,
+  body {
     font-size: 16px !important;
   }
 }
 
 @media screen and (max-width: 1399px) {
-  html, body {
+  html,
+  body {
     font-size: 15px !important;
   }
 }
 
 @media screen and (max-width: 1050px) {
-  html, body {
+  html,
+  body {
     font-size: 14px !important;
   }
 }
