--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,3 +1,4 @@
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -20,6 +21,7 @@ body {
 
 * {
   box-sizing: border-box;
+  touch-action: pan-y !important;
   padding: 0;
   margin: 0;
 }
@@ -43,9 +45,51 @@ a {
   }
 }
 
+
 @media screen and (max-width: 1050px) {
   html,
   body {
     font-size: 14px !important;
   }
 }
+
+@media screen and (max-width: 600px) {
+  html,
+  body {
+    font-size: 13px !important;
+  }
+}
+
+@supports (-webkit-overflow-scrolling: touch) {
+  .scroll-lock {
+    position: fixed;
+    width: 100%;
+    overflow-y: scroll;
+  }
+}
+
+.image-gallery-index {
+  font-family: Arial;
+  border-radius: 20px;
+  @media screen and (max-width: 600px) {
+    margin-right: 20px;
+  }
+}
+
+.image-gallery, .image-gallery-content, .image-gallery-slide-wrapper, .image-gallery-swipe, .image-gallery-slides, .image-gallery-slide {
+  height: 100% !important;
+  width: 100% !important;
+}
+
+@media screen and (max-width: 660px) {
+  .gallery, .image-gallery, .image-gallery-content, .image-gallery-slide-wrapper, .image-gallery-swipe, .image-gallery-slides {
+    margin: 0 !important;
+    padding: 0 !important;
+  }
+}
+
+img {
+  outline: none;
+  touch-action: pan-y !important;
+}
+
