--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -69,7 +69,7 @@ a {
 }
 
 .image-gallery-index {
-  font-family: Arial;
+  font-family: Arial, serif;
   border-radius: 20px;
   @media screen and (max-width: 600px) {
     margin-right: 20px;
