--- a/src/components/ui/cards/massageBlock/massage-block.module.scss
+++ b/src/components/ui/cards/massageBlock/massage-block.module.scss
@@ -64,7 +64,7 @@
 
 
     h3 {
-      font-family: var(--font-cormorant);
+      font-family: var(--font-cormorant), serif;
       font-size: 1.6em;
       font-weight: 400;
       margin-bottom: 1rem;
@@ -72,7 +72,7 @@
     }
 
     h2 {
-      font-family: var(--font-cormorant);
+      font-family: var(--font-cormorant), serif;
       font-size: 2.2em;
       font-weight: 400;
       margin-bottom: 1rem;
