--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -5,7 +5,7 @@
   width: 100%;
   display: flex;
   background: rgb(243, 181, 239);
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
   z-index: 100;
 }
 
@@ -128,7 +128,7 @@
 }
 
 .hamburger__lines .line1 {
-  transform-origin: 0% 0%;
+  transform-origin: 0 0;
   transition: transform 0.4s ease-in-out;
 }
 
@@ -137,29 +137,29 @@
 }
 
 .hamburger__lines .line3 {
-  transform-origin: 0% 100%;
+  transform-origin: 0 100%;
   transition: transform 0.4s ease-in-out;
 }
 
-input[type="checkbox"]:checked {
+.checkbox:checked {
   transform: translateX(0);
 }
 
-input[type="checkbox"]:checked ~ .hamburger__lines .line1 {
+.checkbox:checked ~ .hamburger__lines .line1 {
   transform: rotate(45deg);
 }
 
-input[type="checkbox"]:checked ~ .hamburger__lines .line2 {
+.checkbox:checked ~ .hamburger__lines .line2 {
   transform: scaleY(0);
 }
 
-input[type="checkbox"]:checked ~ .hamburger__lines .line3 {
+.checkbox:checked ~ .hamburger__lines .line3 {
   transform: rotate(-45deg);
 }
 
 @media screen and (max-width: 1220px) {
   .nav__bar {
-    margin-left: 0%;
+    margin-left: 0;
   }
 }
 
